--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <nav>
-            <section><img src="https://placehold.it/200x70/ddd" alt="logo"></section>
             <section>
+                <img src="https://placehold.it/200x70/ddd" alt="logo">
                 <ul>
                     <li>Nav item 1</li>
                     <li>Nav item 2</li>
